Anonymous | Login | 2021-01-18 07:49 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0026773 | Community | [OCCT] OCCT:Visualization | public | 2015-10-14 11:28 | 2016-04-20 15:48 | ||||
Reporter | BenjaminBihler | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2012 | OS Version | 32bit | ||||
Product Version | [OCCT] 6.3.1 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0026773: Visualization - deviation angle cannot be set by AIS_InteractiveContext::SetDeviationAngle() due to misprint | ||||||||
Description | The setter takes the angle parameter and sets it as deviation coefficient. This seems to be a typo.void AIS_InteractiveContext::SetDeviationCoefficient (const Standard_Real theCoefficient) { myDefaultDrawer->SetDeviationCoefficient (theCoefficient); } void AIS_InteractiveContext::SetDeviationAngle (const Standard_Real theAngle) { myDefaultDrawer->SetDeviationCoefficient (theAngle); } | ||||||||
Steps To Reproduce | Not required, source code seems to have an obvious error | ||||||||
Tags | No tags attached. | ||||||||
Test case number | |||||||||
Attached Files | |||||||||
![]() |
|
(0046720) git (administrator) 2015-10-14 11:37 |
Branch CR0026773 has been created by BenjaminBihler. SHA-1: db67d608f5e21e4695a605149f02fc60bbb53ba1 Detailed log of new commits: Author: Benjamin Bihler Date: Wed Oct 14 10:35:47 2015 +0200 Modified deviation angle setter to set the angle |
(0046722) git (administrator) 2015-10-14 11:45 |
Branch CR26773 has been created by kgv. SHA-1: 130605678b75864cb87ac1d3c23ef9b6911e93b4 Detailed log of new commits: Author: Benjamin Bihler Date: Wed Oct 14 11:45:18 2015 +0300 0026773: Visualization - deviation angle cannot be set by AIS_InteractiveContext::SetDeviationAngle() due to misprint Modified deviation angle setter to set the angle. |
(0046723) kgv (developer) 2015-10-14 11:46 |
Please test the patch. |
(0046775) mkv (tester) 2015-10-15 11:54 |
Dear BugMaster, Branch CR26773 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 130605678b75864cb87ac1d3c23ef9b6911e93b4 Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92441401 / 92512152 [-0.08%] Total CPU difference: 19359.879999999826 / 19304.950000000048 [+0.28%] products component : Total MEMORY difference: 26320455 / 26341594 [-0.08%] Total CPU difference: 7244.290000000009 / 7327.720000000003 [-1.14%] Testing on Windows: occt component : Total MEMORY difference: 58085156 / 58096926 [-0.02%] Total CPU difference: 18410.5516155989 / 18015.8690855989 [+2.19%] products component : Total MEMORY difference: 17180548 / 17185795 [-0.03%] Total CPU difference: 5872.766845699987 / 5633.28971059997 [+4.25%] There are no differences in images found by testdiff. |
(0046776) mkv (tester) 2015-10-15 11:54 |
Dear BugMaster, Branch CR26773 is TESTED. |
(0046891) git (administrator) 2015-10-16 16:17 |
Branch CR0026773 has been deleted by kgv. SHA-1: db67d608f5e21e4695a605149f02fc60bbb53ba1 |
(0046906) git (administrator) 2015-10-16 16:17 |
Branch CR26773 has been deleted by kgv. SHA-1: 130605678b75864cb87ac1d3c23ef9b6911e93b4 |
![]() |
|||
occt: master e19792fa
Timestamp: 2015-10-14 08:45:18 Author: BenjaminBihler Committer: bugmaster [ Details ] [ Diff ] |
0026773: Visualization - deviation angle cannot be set by AIS_InteractiveContext::SetDeviationAngle() due to misprint Modified deviation angle setter to set the angle. |
||
mod - src/AIS/AIS_InteractiveContext.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-10-14 11:28 | BenjaminBihler | New Issue | |
2015-10-14 11:28 | BenjaminBihler | Assigned To | => kgv |
2015-10-14 11:34 | kgv | Product Version | 6.9.1 => 6.3.1 |
2015-10-14 11:34 | kgv | Summary | Deviation angle cannot be set in AIS_InteractiveContext => Visualization - deviation angle cannot be set in AIS_InteractiveContext |
2015-10-14 11:34 | kgv | Description Updated | View Revisions |
2015-10-14 11:37 | git | Note Added: 0046720 | |
2015-10-14 11:38 | BenjaminBihler | Status | new => resolved |
2015-10-14 11:38 | BenjaminBihler | Steps to Reproduce Updated | View Revisions |
2015-10-14 11:45 | git | Note Added: 0046722 | |
2015-10-14 11:46 | kgv | Note Added: 0046723 | |
2015-10-14 11:46 | kgv | Assigned To | kgv => bugmaster |
2015-10-14 11:46 | kgv | Severity | minor => trivial |
2015-10-14 11:46 | kgv | Status | resolved => reviewed |
2015-10-14 11:46 | kgv | Summary | Visualization - deviation angle cannot be set in AIS_InteractiveContext => Visualization - deviation angle cannot be set by AIS_InteractiveContext::SetDeviationAngle() due to misprint |
2015-10-14 13:01 | mkv | Assigned To | bugmaster => mkv |
2015-10-15 11:54 | mkv | Note Added: 0046775 | |
2015-10-15 11:54 | mkv | Note Added: 0046776 | |
2015-10-15 11:54 | mkv | Assigned To | mkv => bugmaster |
2015-10-15 11:54 | mkv | Status | reviewed => tested |
2015-10-16 13:18 | bugmaster | Changeset attached | => occt master e19792fa |
2015-10-16 13:18 | bugmaster | Status | tested => verified |
2015-10-16 13:18 | bugmaster | Resolution | open => fixed |
2015-10-16 16:17 | git | Note Added: 0046891 | |
2015-10-16 16:17 | git | Note Added: 0046906 | |
2016-04-20 15:44 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:48 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |