0026773: Visualization - deviation angle cannot be set by AIS_InteractiveContext::SetDeviationAngle() due to misprint

Modified deviation angle setter to set the angle.